<resources>
    <string name="app_name">Dreamboat</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Dreamboat</string>
    <string name="new_entry_text">Sleep to dream.</string>
    <string name="get_started_text">New Dream Entry</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Sign In</string>
    <string name="create_account_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="man_logo">Main Logo</string>
    <string name="interpret_button_text">Interpret</string>
    <string name="dream_title_text">Dream title</string>
    <string name="save_button_text">Save Entry</string>
    <string name="share_button_text">Share</string>
    <string name="start_typing_text">Start typing...</string>
    <string name="small_logo">small logo</string>
    <string name="date_hint">Today</string>
    <string name="dream_entry_hint">Last night I dreamt...</string>
    <string name="post_name">Name</string>
    <string name="logo_description">dreamboat_logo</string>
    <string name="new_dream_header">New Dreamboat Entry</string>
    <string name="menu_title">New Entry</string>
    <string name="signout">Signout</string>
    <string name="no_entries_hint">Your Dreamboat is empty!</string>
    <string name="speak_button_icon">speakButton</string>
    <string name="speech_prompt">Speak to record your dream</string>
    <string name="speech_not_supported">Speech to text is not supported on your device</string>
    <string name="my_dreamboat">Dreamboat</string>
    <string name="add_entry_prompt">Record your first dream</string>
    <string name="dream_title_hint">Dream Entry Title</string>
    <string name="your_dreamboat">Dreamboat</string>
    <string name="title_activity_interpret">InterpretActivity</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_entry_dashboard">New Entry</string>
    <string name="dreamboat_dashboard">My Dreamboat</string>
    <string name="search_action_text">Search</string>
</resources>
