<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:srcCompat="@drawable/dreamboat_logo"
        tools:layout_editor_absoluteX="18dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="68dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        tools:layout_editor_absoluteX="18dp">

        <TextView
            android:id="@+id/newEntryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/work_sans_light"
            android:text="@string/new_entry_text"
            android:textSize="19sp" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/get_started_text"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>